# cmake-library-add

./: CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
